# r3t4rd3d_g41n

./: .gitignore  Cargo.toml  README.md
aaa_mark_vst/: Cargo.toml
aaa_mark_vst/src/: distortion.rs  editor.rs  gain.rs  lib.rs  main.rs
ret_gain/: Cargo.toml
ret_gain/src/: chaos.rs  distortion.rs  editor.rs  fractal.rs  gain.rs  lib.rs  main.rs  plugin.rs
